--- a/admin/index.html
+++ b/admin/index.html
@@ -3,135 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Login - Schedule Booking</title>
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%232563EB'%3E%3Cpath d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z'/%3E%3C/svg%3E">
-
-  <!-- Google Fonts - Inter -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/components.css">
-  <link rel="stylesheet" href="../css/admin.css">
+  <title>Admin - Schedule Booking</title>
+  <style>
+    /* Minimal loading styles */
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background-color: #F9FAFB;
+    }
+    .loading {
+      text-align: center;
+      color: #6B7280;
+    }
+    .spinner {
+      width: 32px;
+      height: 32px;
+      border: 3px solid #E5E7EB;
+      border-top-color: #2563EB;
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+      margin: 0 auto 16px;
+    }
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </head>
-<body class="login-page">
-  <!-- ========================================
-       LOGIN CONTAINER
-       ======================================== -->
-  <div class="login-container">
-    <div class="login-card">
-      <!-- Logo -->
-      <div class="login-logo">
-        <div class="login-logo-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
-          </svg>
-        </div>
-        <h1 class="login-title">Admin Dashboard</h1>
-        <p class="login-subtitle">Sign in to manage bookings</p>
-      </div>
-
-      <!-- Login Form -->
-      <form id="login-form" class="login-form">
-        <div class="form-group">
-          <label class="form-label" for="username">Username</label>
-          <input
-            type="text"
-            class="form-input"
-            id="username"
-            placeholder="Enter username"
-            autocomplete="username"
-            required
-          >
-        </div>
-
-        <div class="form-group">
-          <label class="form-label" for="password">Password</label>
-          <input
-            type="password"
-            class="form-input"
-            id="password"
-            placeholder="Enter password"
-            autocomplete="current-password"
-            required
-          >
-        </div>
-
-        <!-- Error Message -->
-        <div class="login-error" id="login-error">
-          Invalid username or password
-        </div>
-
-        <button type="submit" class="btn btn-primary w-full login-btn">
-          Sign In
-        </button>
-      </form>
-
-      <!-- Demo Credentials Hint -->
-      <div class="login-hint">
-        <p>Demo credentials:</p>
-        <p><strong>Username:</strong> admin</p>
-        <p><strong>Password:</strong> demo123</p>
-      </div>
-
-      <!-- Back Link -->
-      <a href="../index.html" class="login-back">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M15 19l-7-7 7-7"/>
-        </svg>
-        Back to Schedule
-      </a>
-    </div>
+<body>
+  <div class="loading">
+    <div class="spinner"></div>
+    <p>Loading Admin...</p>
   </div>
 
-  <!-- ========================================
-       SCRIPTS
-       ======================================== -->
-  <script src="../js/data.js"></script>
-  <script src="../js/storage.js"></script>
-  <script src="../js/utils.js"></script>
   <script>
-    // Check if already logged in
-    document.addEventListener('DOMContentLoaded', () => {
-      if (Storage.isAuthenticated()) {
-        window.location.href = 'dashboard.html';
-        return;
+    (function() {
+      // Detect if mobile device
+      function isMobileDevice() {
+        // Check viewport width
+        if (window.innerWidth < 768) return true;
+
+        // Check user agent for mobile devices
+        const mobileRegex = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i;
+        if (mobileRegex.test(navigator.userAgent)) return true;
+
+        // Check touch capability
+        if ('ontouchstart' in window || navigator.maxTouchPoints > 0) {
+          if (window.innerWidth >= 768) return false;
+          return true;
+        }
+
+        return false;
       }
 
-      // Setup login form
-      const form = document.getElementById('login-form');
-      const errorEl = document.getElementById('login-error');
-      const usernameInput = document.getElementById('username');
-      const passwordInput = document.getElementById('password');
+      // Redirect based on device
+      const targetFolder = isMobileDevice() ? 'mobile' : 'desktop';
 
-      form.addEventListener('submit', (e) => {
-        e.preventDefault();
+      // Preserve any query parameters
+      const queryString = window.location.search;
 
-        const username = usernameInput.value.trim();
-        const password = passwordInput.value;
-
-        // Validate credentials
-        if (username === ADMIN_CREDENTIALS.username && password === ADMIN_CREDENTIALS.password) {
-          Storage.saveAuth(true);
-          window.location.href = 'dashboard.html';
-        } else {
-          errorEl.classList.add('visible');
-          passwordInput.value = '';
-          passwordInput.focus();
-        }
-      });
-
-      // Clear error on input
-      [usernameInput, passwordInput].forEach(input => {
-        input.addEventListener('input', () => {
-          errorEl.classList.remove('visible');
-        });
-      });
-    });
+      // Redirect to appropriate login page
+      window.location.replace(targetFolder + '/index.html' + queryString);
+    })();
   </script>
 </body>
 </html>
