Viewport resize auto-switch between desktop and mobile views
=== TECHNICAL CHANGES ===
- desktop.html: Added resize listener to redirect to mobile.html when < 768px
- mobile.html: Added resize listener to redirect to desktop.html when >= 768px
- admin/desktop/index.html: Viewport switch to mobile login
- admin/desktop/dashboard.html: Viewport switch to mobile dashboard
- admin/desktop/bookings.html: Viewport switch to mobile bookings
- admin/mobile/index.html: Viewport switch to desktop login
- admin/mobile/dashboard.html: Viewport switch to desktop dashboard
- admin/mobile/bookings.html: Viewport switch to desktop bookings
- All pages: 250ms debounced resize detection for smooth switching

=== SESSION CONTEXT ===
- Project: Schedule Management App | Type: Demo Development | Time: ~10 min
- Emotional Depth: MEDIUM - Responsive UX enhancement
- Leadership: Kiyo's UX requirement | Alice: Cross-device navigation patterns

--- a/admin/desktop/bookings.html
+++ b/admin/desktop/bookings.html
@@ -154,5 +154,24 @@
   <script src="../../js/storage.js"></script>
   <script src="../../js/utils.js"></script>
   <script src="../../js/admin-desktop.js"></script>
+
+  <!-- Viewport Switch Detection -->
+  <script>
+    (function() {
+      let resizeTimer;
+      const MOBILE_BREAKPOINT = 768;
+
+      function checkViewport() {
+        if (window.innerWidth < MOBILE_BREAKPOINT) {
+          window.location.replace('../mobile/bookings.html');
+        }
+      }
+
+      window.addEventListener('resize', function() {
+        clearTimeout(resizeTimer);
+        resizeTimer = setTimeout(checkViewport, 250);
+      });
+    })();
+  </script>
 </body>
 </html>
