--- a/admin/desktop/index.html
+++ b/admin/desktop/index.html
@@ -96,5 +96,24 @@
       });
     });
   </script>
+
+  <!-- Viewport Switch Detection -->
+  <script>
+    (function() {
+      let resizeTimer;
+      const MOBILE_BREAKPOINT = 768;
+
+      function checkViewport() {
+        if (window.innerWidth < MOBILE_BREAKPOINT) {
+          window.location.replace('../mobile/index.html');
+        }
+      }
+
+      window.addEventListener('resize', function() {
+        clearTimeout(resizeTimer);
+        resizeTimer = setTimeout(checkViewport, 250);
+      });
+    })();
+  </script>
 </body>
 </html>
