--- a/admin/mobile/bookings.html
+++ b/admin/mobile/bookings.html
@@ -133,5 +133,24 @@
   <script src="../../js/storage.js"></script>
   <script src="../../js/utils.js"></script>
   <script src="../../js/admin-mobile.js"></script>
+
+  <!-- Viewport Switch Detection -->
+  <script>
+    (function() {
+      let resizeTimer;
+      const DESKTOP_BREAKPOINT = 768;
+
+      function checkViewport() {
+        if (window.innerWidth >= DESKTOP_BREAKPOINT) {
+          window.location.replace('../desktop/bookings.html');
+        }
+      }
+
+      window.addEventListener('resize', function() {
+        clearTimeout(resizeTimer);
+        resizeTimer = setTimeout(checkViewport, 250);
+      });
+    })();
+  </script>
 </body>
 </html>
