--- a/mobile.html
+++ b/mobile.html
@@ -139,5 +139,24 @@
   <script src="js/storage.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/mobile.js"></script>
+
+  <!-- Viewport Switch Detection -->
+  <script>
+    (function() {
+      let resizeTimer;
+      const DESKTOP_BREAKPOINT = 768;
+
+      function checkViewport() {
+        if (window.innerWidth >= DESKTOP_BREAKPOINT) {
+          window.location.replace('desktop.html' + window.location.search);
+        }
+      }
+
+      window.addEventListener('resize', function() {
+        clearTimeout(resizeTimer);
+        resizeTimer = setTimeout(checkViewport, 250);
+      });
+    })();
+  </script>
 </body>
 </html>
