--- a/desktop.html
+++ b/desktop.html
@@ -32,10 +32,10 @@
       <span class="header-logo-text">Schedule Booking</span>
     </div>
     <nav class="header-nav">
-      <a href="#" class="header-nav-link active">Home</a>
+      <a href="#top" class="header-nav-link active">Home</a>
       <a href="#timetable" class="header-nav-link">Schedule</a>
-      <a href="#" class="header-nav-link">About</a>
-      <a href="#" class="header-nav-link">Contact</a>
+      <a href="#about" class="header-nav-link">About</a>
+      <a href="#contact" class="header-nav-link">Contact</a>
       <a href="admin/index.html" class="btn btn-outline btn-sm">Admin</a>
     </nav>
   </header>
@@ -43,15 +43,17 @@
   <!-- ========================================
        MAIN CONTENT
        ======================================== -->
-  <main class="main-content">
+  <main class="main-content" id="top">
+    <!-- Hero Section -->
     <div class="container">
-      <!-- Hero Section -->
       <section class="hero">
         <h1 class="hero-title">Book Your Time Slot</h1>
         <p class="hero-subtitle">Select an available slot from the schedule below to make a booking</p>
       </section>
+    </div>
 
-      <!-- Weekly Timetable Grid -->
+    <!-- Weekly Timetable Grid - Wide Container -->
+    <div class="container-wide">
       <section id="timetable" class="timetable-section">
         <div class="timetable-wrapper">
           <table class="timetable" id="timetable-desktop">
@@ -84,6 +86,83 @@
         </div>
       </section>
     </div>
+
+    <!-- About Section -->
+    <div class="container">
+      <section id="about" class="section">
+        <div class="section-header">
+          <h2 class="section-title">About Our Service</h2>
+          <p class="section-subtitle">Simple and efficient booking management</p>
+        </div>
+        <div class="about-content">
+          <div class="about-card">
+            <div class="about-card-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
+              </svg>
+            </div>
+            <h3 class="about-card-title">Easy Scheduling</h3>
+            <p class="about-card-text">Book your preferred time slot with just a few clicks. Our intuitive interface makes scheduling simple.</p>
+          </div>
+          <div class="about-card">
+            <div class="about-card-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/>
+              </svg>
+            </div>
+            <h3 class="about-card-title">Real-time Updates</h3>
+            <p class="about-card-text">See availability instantly. Slots update in real-time as bookings are made and confirmed.</p>
+          </div>
+          <div class="about-card">
+            <div class="about-card-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/>
+              </svg>
+            </div>
+            <h3 class="about-card-title">Quick Confirmation</h3>
+            <p class="about-card-text">Receive confirmation once your booking is approved by our admin team.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact" class="section">
+        <div class="section-header">
+          <h2 class="section-title">Contact Us</h2>
+          <p class="section-subtitle">Get in touch if you have any questions</p>
+        </div>
+        <div class="contact-content">
+          <div class="contact-info">
+            <div class="contact-item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+              </svg>
+              <span>contact@example.com</span>
+            </div>
+            <div class="contact-item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+              </svg>
+              <span>+60 12-345-6789</span>
+            </div>
+            <div class="contact-item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
+                <path d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+              </svg>
+              <span>Kuala Lumpur, Malaysia</span>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <p>&copy; 2026 Schedule Booking. All rights reserved.</p>
+      </div>
+    </footer>
   </main>
 
   <!-- ========================================
