--- a/mobile.html
+++ b/mobile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Schedule Booking</title>
+  <title>Schedule Booking - Driving School</title>
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%232563EB'%3E%3Cpath d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z'/%3E%3C/svg%3E">
@@ -36,46 +36,172 @@
       </div>
       <span class="mobile-header-title">Schedule Booking</span>
     </div>
+    <a href="admin/index.html" class="mobile-header-admin">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
+      </svg>
+    </a>
   </header>
 
   <!-- ========================================
        MAIN CONTENT
        ======================================== -->
   <main class="mobile-main">
-    <!-- Hero Section -->
-    <section class="mobile-hero">
-      <h1 class="mobile-hero-title">Book Your Slot</h1>
-      <p class="mobile-hero-subtitle">Tap an available slot to book</p>
+    <!-- HOME SECTION -->
+    <section id="home" class="mobile-page-section">
+      <div class="mobile-hero">
+        <div class="mobile-hero-badge">Driving School</div>
+        <h1 class="mobile-hero-title">Book Your Driving Lesson</h1>
+        <p class="mobile-hero-subtitle">Start your journey to becoming a confident driver. Choose your time slot below.</p>
+        <a href="#schedule" class="btn btn-primary mobile-hero-cta">View Schedule</a>
+      </div>
     </section>
 
-    <!-- Day Tabs -->
-    <div class="day-tabs-wrapper">
-      <div class="day-tabs" id="day-tabs">
-        <!-- Day tabs will be rendered by JavaScript -->
+    <!-- SCHEDULE SECTION -->
+    <section id="schedule" class="mobile-page-section">
+      <div class="mobile-section-header">
+        <h2 class="mobile-section-title">Class Schedule</h2>
+        <p class="mobile-section-subtitle">Tap an available slot to book</p>
       </div>
-    </div>
 
-    <!-- Slot Cards -->
-    <div class="slot-cards" id="slot-cards">
-      <!-- Slot cards will be rendered by JavaScript -->
-    </div>
+      <!-- Day Tabs -->
+      <div class="day-tabs-wrapper">
+        <div class="day-tabs" id="day-tabs">
+          <!-- Day tabs will be rendered by JavaScript -->
+        </div>
+      </div>
+
+      <!-- Slot Cards -->
+      <div class="slot-cards" id="slot-cards">
+        <!-- Slot cards will be rendered by JavaScript -->
+      </div>
+    </section>
+
+    <!-- ABOUT SECTION -->
+    <section id="about" class="mobile-page-section">
+      <div class="mobile-section-header">
+        <h2 class="mobile-section-title">Why Choose Us</h2>
+        <p class="mobile-section-subtitle">Your trusted driving partner</p>
+      </div>
+
+      <div class="mobile-about-cards">
+        <div class="mobile-about-card">
+          <div class="mobile-about-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/>
+            </svg>
+          </div>
+          <div class="mobile-about-content">
+            <h3 class="mobile-about-title">Expert Instructors</h3>
+            <p class="mobile-about-text">Certified and experienced driving instructors</p>
+          </div>
+        </div>
+
+        <div class="mobile-about-card">
+          <div class="mobile-about-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/>
+            </svg>
+          </div>
+          <div class="mobile-about-content">
+            <h3 class="mobile-about-title">Flexible Schedule</h3>
+            <p class="mobile-about-text">Morning to evening, 7 days a week</p>
+          </div>
+        </div>
+
+        <div class="mobile-about-card">
+          <div class="mobile-about-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"/>
+            </svg>
+          </div>
+          <div class="mobile-about-content">
+            <h3 class="mobile-about-title">Safe Learning</h3>
+            <p class="mobile-about-text">Modern dual-control vehicles</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CONTACT SECTION -->
+    <section id="contact" class="mobile-page-section">
+      <div class="mobile-section-header">
+        <h2 class="mobile-section-title">Contact Us</h2>
+        <p class="mobile-section-subtitle">Get in touch</p>
+      </div>
+
+      <div class="mobile-contact-cards">
+        <a href="mailto:info@drivingschool.com" class="mobile-contact-card">
+          <div class="mobile-contact-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
+            </svg>
+          </div>
+          <span>info@drivingschool.com</span>
+        </a>
+
+        <a href="tel:+60123456789" class="mobile-contact-card">
+          <div class="mobile-contact-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+            </svg>
+          </div>
+          <span>+60 12-345-6789</span>
+        </a>
+
+        <div class="mobile-contact-card">
+          <div class="mobile-contact-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
+              <path d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
+            </svg>
+          </div>
+          <span>Kuala Lumpur, Malaysia</span>
+        </div>
+
+        <div class="mobile-contact-card">
+          <div class="mobile-contact-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/>
+            </svg>
+          </div>
+          <span>Open Daily: 8AM - 8PM</span>
+        </div>
+      </div>
+
+      <div class="mobile-footer">
+        <p>&copy; 2026 Schedule Booking - Driving School</p>
+      </div>
+    </section>
   </main>
 
   <!-- ========================================
        BOTTOM NAVIGATION
        ======================================== -->
   <nav class="bottom-nav">
-    <a href="#" class="bottom-nav-item active">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+    <a href="#home" class="bottom-nav-item active" data-section="home">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"/>
       </svg>
       <span>Home</span>
     </a>
-    <a href="#" class="bottom-nav-item" id="nav-schedule">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+    <a href="#schedule" class="bottom-nav-item" data-section="schedule">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
         <path d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
       </svg>
       <span>Schedule</span>
+    </a>
+    <a href="#about" class="bottom-nav-item" data-section="about">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+      </svg>
+      <span>About</span>
+    </a>
+    <a href="#contact" class="bottom-nav-item" data-section="contact">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
+      </svg>
+      <span>Contact</span>
     </a>
   </nav>
 
@@ -85,7 +211,7 @@
   <div class="modal-overlay" id="booking-modal">
     <div class="modal mobile-modal">
       <div class="modal-header">
-        <h2 class="modal-title">Book This Slot</h2>
+        <h2 class="modal-title">Book Driving Lesson</h2>
         <button class="modal-close" id="modal-close" aria-label="Close modal">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M6 18L18 6M6 6l12 12"/>
@@ -127,7 +253,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" id="modal-cancel">Cancel</button>
-        <button type="submit" class="btn btn-primary" id="modal-submit">Book Now</button>
+        <button type="submit" class="btn btn-primary" id="modal-submit">Book Lesson</button>
       </div>
     </div>
   </div>
@@ -156,6 +282,29 @@
         clearTimeout(resizeTimer);
         resizeTimer = setTimeout(checkViewport, 250);
       });
+
+      // Bottom nav active state on scroll
+      const sections = document.querySelectorAll('.mobile-page-section');
+      const navItems = document.querySelectorAll('.bottom-nav-item[data-section]');
+
+      function updateActiveNav() {
+        let current = '';
+        sections.forEach(section => {
+          const sectionTop = section.offsetTop - 100;
+          if (window.scrollY >= sectionTop) {
+            current = section.getAttribute('id');
+          }
+        });
+
+        navItems.forEach(item => {
+          item.classList.remove('active');
+          if (item.dataset.section === current) {
+            item.classList.add('active');
+          }
+        });
+      }
+
+      window.addEventListener('scroll', updateActiveNav);
     })();
   </script>
 </body>
