Mobile-only PWA - Desktop shows mobile-only message
=== TECHNICAL CHANGES ===
- index.html: Complete redesign as mobile-only gate
- index.html: Desktop shows "Mobile App Only" message with QR placeholder
- index.html: Mobile users auto-redirect to mobile.html
- index.html: Features list and admin link for desktop viewers
- admin/index.html: Simplified to always redirect to mobile admin
- mobile.html: Removed viewport switch detection (no longer needed)
- README.md: Complete documentation for mobile-only PWA
- README.md: Project structure, features, tech stack, usage guide

=== SESSION CONTEXT ===
- Project: Schedule Management App | Type: Demo Development | Time: ~15 min
- Emotional Depth: HIGH - Strategic pivot to mobile-first PWA
- Leadership: Kiyo's mobile-only vision | Alice: PWA architecture design

--- a/mobile.html
+++ b/mobile.html
@@ -266,7 +266,7 @@
   <script src="js/utils.js"></script>
   <script src="js/mobile.js"></script>
 
-  <!-- Tab Navigation & Viewport Switch -->
+  <!-- Tab Navigation -->
   <script>
     (function() {
       // Tab-based page navigation
@@ -308,21 +308,6 @@
           switchPage(heroCta.dataset.nav);
         });
       }
-
-      // Viewport switch detection
-      let resizeTimer;
-      const DESKTOP_BREAKPOINT = 768;
-
-      function checkViewport() {
-        if (window.innerWidth >= DESKTOP_BREAKPOINT) {
-          window.location.replace('desktop.html' + window.location.search);
-        }
-      }
-
-      window.addEventListener('resize', function() {
-        clearTimeout(resizeTimer);
-        resizeTimer = setTimeout(checkViewport, 250);
-      });
     })();
   </script>
 </body>
