--- a/admin/index.html
+++ b/admin/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - Schedule Booking</title>
+
+  <!-- PWA Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#2563EB">
+
   <style>
-    /* Minimal loading styles */
     body {
       margin: 0;
       min-height: 100vh;
@@ -40,33 +44,9 @@
   </div>
 
   <script>
+    // Mobile-only PWA - Always redirect to mobile admin
     (function() {
-      // Detect if mobile device
-      function isMobileDevice() {
-        // Check viewport width
-        if (window.innerWidth < 768) return true;
-
-        // Check user agent for mobile devices
-        const mobileRegex = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i;
-        if (mobileRegex.test(navigator.userAgent)) return true;
-
-        // Check touch capability
-        if ('ontouchstart' in window || navigator.maxTouchPoints > 0) {
-          if (window.innerWidth >= 768) return false;
-          return true;
-        }
-
-        return false;
-      }
-
-      // Redirect based on device
-      const targetFolder = isMobileDevice() ? 'mobile' : 'desktop';
-
-      // Preserve any query parameters
-      const queryString = window.location.search;
-
-      // Redirect to appropriate login page
-      window.location.replace(targetFolder + '/index.html' + queryString);
+      window.location.replace('mobile/index.html');
     })();
   </script>
 </body>
