--- a/index.html
+++ b/index.html
@@ -3,71 +3,252 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Schedule Booking</title>
+  <title>Schedule Booking - Driving School</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%232563EB'%3E%3Cpath d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z'/%3E%3C/svg%3E">
+
+  <!-- PWA Meta Tags -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="theme-color" content="#2563EB">
+
   <style>
-    /* Minimal loading styles */
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Inter', sans-serif;
+      background: linear-gradient(135deg, #EFF6FF 0%, #DBEAFE 100%);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background-color: #F9FAFB;
+      padding: 24px;
     }
-    .loading {
+
+    .container {
       text-align: center;
-      color: #6B7280;
+      max-width: 480px;
     }
-    .spinner {
-      width: 32px;
-      height: 32px;
+
+    /* Mobile Loading */
+    .mobile-loading {
+      display: none;
+    }
+
+    .mobile-loading .spinner {
+      width: 40px;
+      height: 40px;
       border: 3px solid #E5E7EB;
       border-top-color: #2563EB;
       border-radius: 50%;
       animation: spin 0.8s linear infinite;
       margin: 0 auto 16px;
     }
+
+    .mobile-loading p {
+      color: #6B7280;
+      font-size: 14px;
+    }
+
     @keyframes spin {
       to { transform: rotate(360deg); }
+    }
+
+    /* Desktop Block */
+    .desktop-block {
+      display: none;
+    }
+
+    .icon-wrapper {
+      width: 80px;
+      height: 80px;
+      background-color: #2563EB;
+      border-radius: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto 24px;
+      box-shadow: 0 10px 25px rgba(37, 99, 235, 0.3);
+    }
+
+    .icon-wrapper svg {
+      width: 40px;
+      height: 40px;
+      color: white;
+    }
+
+    h1 {
+      font-size: 28px;
+      font-weight: 700;
+      color: #111827;
+      margin-bottom: 12px;
+    }
+
+    .subtitle {
+      font-size: 16px;
+      color: #6B7280;
+      margin-bottom: 32px;
+      line-height: 1.5;
+    }
+
+    .qr-section {
+      background: white;
+      border-radius: 16px;
+      padding: 24px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+      margin-bottom: 24px;
+    }
+
+    .qr-title {
+      font-size: 14px;
+      font-weight: 600;
+      color: #374151;
+      margin-bottom: 16px;
+    }
+
+    .qr-placeholder {
+      width: 160px;
+      height: 160px;
+      background: #F3F4F6;
+      border: 2px dashed #D1D5DB;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+      color: #9CA3AF;
+      font-size: 12px;
+    }
+
+    .features {
+      display: flex;
+      justify-content: center;
+      gap: 24px;
+      flex-wrap: wrap;
+    }
+
+    .feature {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      color: #6B7280;
+      font-size: 14px;
+    }
+
+    .feature svg {
+      width: 20px;
+      height: 20px;
+      color: #22C55E;
+    }
+
+    .admin-link {
+      margin-top: 32px;
+      padding-top: 24px;
+      border-top: 1px solid #E5E7EB;
+    }
+
+    .admin-link a {
+      color: #2563EB;
+      text-decoration: none;
+      font-size: 14px;
+      font-weight: 500;
+    }
+
+    .admin-link a:hover {
+      text-decoration: underline;
+    }
+
+    /* Show correct content based on device */
+    @media (max-width: 767px) {
+      .mobile-loading {
+        display: block;
+      }
+      .desktop-block {
+        display: none !important;
+      }
+    }
+
+    @media (min-width: 768px) {
+      .mobile-loading {
+        display: none !important;
+      }
+      .desktop-block {
+        display: block;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="loading">
-    <div class="spinner"></div>
-    <p>Loading...</p>
+  <div class="container">
+    <!-- Mobile: Show loading then redirect -->
+    <div class="mobile-loading">
+      <div class="spinner"></div>
+      <p>Loading app...</p>
+    </div>
+
+    <!-- Desktop: Show mobile-only message -->
+    <div class="desktop-block">
+      <div class="icon-wrapper">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <rect x="5" y="2" width="14" height="20" rx="2" ry="2"/>
+          <line x1="12" y1="18" x2="12.01" y2="18"/>
+        </svg>
+      </div>
+
+      <h1>Mobile App Only</h1>
+      <p class="subtitle">This driving school booking app is designed for mobile devices. Please visit on your smartphone for the best experience.</p>
+
+      <div class="qr-section">
+        <p class="qr-title">Scan to open on mobile</p>
+        <div class="qr-placeholder">
+          QR Code<br>Coming Soon
+        </div>
+      </div>
+
+      <div class="features">
+        <div class="feature">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M5 13l4 4L19 7"/>
+          </svg>
+          <span>Book Lessons</span>
+        </div>
+        <div class="feature">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M5 13l4 4L19 7"/>
+          </svg>
+          <span>View Schedule</span>
+        </div>
+        <div class="feature">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M5 13l4 4L19 7"/>
+          </svg>
+          <span>Contact Us</span>
+        </div>
+      </div>
+
+      <div class="admin-link">
+        <a href="admin/index.html">Admin Login →</a>
+      </div>
+    </div>
   </div>
 
   <script>
+    // Redirect mobile users to mobile.html
     (function() {
-      // Detect if mobile device
       function isMobileDevice() {
-        // Check viewport width
         if (window.innerWidth < 768) return true;
-
-        // Check user agent for mobile devices
         const mobileRegex = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i;
-        if (mobileRegex.test(navigator.userAgent)) return true;
-
-        // Check touch capability
-        if ('ontouchstart' in window || navigator.maxTouchPoints > 0) {
-          // Has touch but check if it's a tablet/large screen
-          if (window.innerWidth >= 768) return false;
-          return true;
-        }
-
-        return false;
+        return mobileRegex.test(navigator.userAgent);
       }
 
-      // Redirect based on device
-      const targetPage = isMobileDevice() ? 'mobile.html' : 'desktop.html';
-
-      // Preserve any query parameters
-      const queryString = window.location.search;
-
-      // Redirect
-      window.location.replace(targetPage + queryString);
+      if (isMobileDevice()) {
+        window.location.replace('mobile.html');
+      }
     })();
   </script>
 </body>
